# acid-303

./: Cargo.toml  README.md  SPEC.md
src/: distortion.rs  envelope.rs  filter.rs  lib.rs  oscillator.rs  presets.rs  sequencer.rs
src/drums/: hihat.rs  kick.rs  mod.rs  sequencer.rs  snare.rs
web/: app.js  index.html  style.css  worklet.js
