[package]
name = "acid_303"
version = "0.1.0"
edition = "2021"
description = "TB-303 style acid synthesizer in WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "AudioContext",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
